--- a/css/style.css
+++ b/css/style.css
@@ -24,8 +24,6 @@ body {
     margin-top: 15px;
     margin-left: 10px;
     border: solid 1px #000;
-    -webkit-box-shadow: 7px 10px 25px 4px rgba(0, 0, 0, 0.56);
-    -moz-box-shadow: 7px 10px 25px 4px rgba(0, 0, 0, 0.56);
     box-shadow: -1px 1px 10px 1px rgba(0, 0, 0, 0.56);
     overflow: hidden;
 }
@@ -38,8 +36,6 @@ body {
     margin-top: 15px;
     margin-left: 10px;
     border: solid 1px #000;
-    -webkit-box-shadow: 7px 10px 25px 4px rgba(0, 0, 0, 0.56);
-    -moz-box-shadow: 7px 10px 25px 4px rgba(0, 0, 0, 0.56);
     box-shadow: -1px 1px 10px 1px rgba(0, 0, 0, 0.56);
     border-radius: 5px;
     overflow: hidden;
@@ -51,8 +47,8 @@ body {
 .cocina {
     position: absolute;
     top: 1px;
-    left: 1px;
-    width: 40px;
+    left: 270px;
+    width: 100px;
     height: 40px;
     text-align: center;
     vertical-align: middle;
@@ -60,38 +56,6 @@ body {
     background-color: lavender;
     border: solid 1px silver;
     box-shadow: 0px 3px 5px 1px silver;
-}
-
-
-/* Mesa */
-
-#mesa {
-    position: absolute;
-    top: 210px;
-    left: 100px;
-    width: 34px;
-    height: 34px;
-    background-color: rosybrown;
-    border-radius: 17px;
-    border: solid 1px brown;
-    box-shadow: 0px 3px 5px 1px silver;
-    -webkit-transition: background-color 8s ease-out;
-    -moz-transition: background-color 8s ease-out;
-    -o-transition: background-color 8s ease-out;
-    transition: background-color 8s ease-out;
-}
-
-#mesa.ready {
-    /* mesa lista */
-    background-color: crimson;
-    border: solid 1px red;
-}
-
-#mesa.waiting {
-    /* mesa esperando */
-    background-color: greenyellow;
-    border: solid 1px green;
-    cursor: pointer;
 }
 
 
@@ -161,4 +125,116 @@ body {
 
 #camarero.back-left {
     background-position: -3px -147px;
+}
+
+
+/* Mesa */
+
+#mesa1 {
+    position: absolute;
+    top: 160px;
+    left: 100px;
+    width: 34px;
+    height: 34px;
+    text-align: center;
+    vertical-align: middle;
+    background-color: rosybrown;
+    border-radius: 17px;
+    border: solid 1px brown;
+    box-shadow: 0px 3px 5px 1px silver;
+    -webkit-transition: background-color 8s ease-out;
+    transition: background-color 8s ease-out;
+}
+
+#mesa2 {
+    position: absolute;
+    top: 160px;
+    left: 300px;
+    width: 34px;
+    height: 34px;
+    text-align: center;
+    vertical-align: middle;
+    background-color: rosybrown;
+    border-radius: 17px;
+    border: solid 1px brown;
+    box-shadow: 0px 3px 5px 1px silver;
+    -webkit-transition: background-color 8s ease-out;
+    transition: background-color 8s ease-out;
+}
+
+#mesa3 {
+    position: absolute;
+    top: 160px;
+    left: 500px;
+    width: 34px;
+    height: 34px;
+    text-align: center;
+    vertical-align: middle;
+    background-color: rosybrown;
+    border-radius: 17px;
+    border: solid 1px brown;
+    box-shadow: 0px 3px 5px 1px silver;
+    -webkit-transition: background-color 8s ease-out;
+    transition: background-color 8s ease-out;
+}
+
+#mesa4 {
+    position: absolute;
+    top: 360px;
+    left: 100px;
+    width: 34px;
+    height: 34px;
+    text-align: center;
+    vertical-align: middle;
+    background-color: rosybrown;
+    border-radius: 17px;
+    border: solid 1px brown;
+    box-shadow: 0px 3px 5px 1px silver;
+    -webkit-transition: background-color 8s ease-out;
+    transition: background-color 8s ease-out;
+}
+
+#mesa5 {
+    position: absolute;
+    top: 360px;
+    left: 300px;
+    width: 34px;
+    height: 34px;
+    text-align: center;
+    vertical-align: middle;
+    background-color: rosybrown;
+    border-radius: 17px;
+    border: solid 1px brown;
+    box-shadow: 0px 3px 5px 1px silver;
+    -webkit-transition: background-color 8s ease-out;
+    transition: background-color 8s ease-out;
+}
+
+#mesa6 {
+    position: absolute;
+    top: 360px;
+    left: 500px;
+    width: 34px;
+    height: 34px;
+    text-align: center;
+    vertical-align: middle;
+    background-color: rosybrown;
+    border-radius: 17px;
+    border: solid 1px brown;
+    box-shadow: 0px 3px 5px 1px silver;
+    -webkit-transition: background-color 8s ease-out;
+    transition: background-color 8s ease-out;
+}
+
+#mesa.ready {
+    /* mesa lista */
+    background-color: crimson;
+    border: solid 1px red;
+}
+
+#mesa.waiting {
+    /* mesa esperando */
+    background-color: greenyellow;
+    border: solid 1px green;
+    cursor: pointer;
 }
