--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ body {
     height: 500px;
     margin-top: 15px;
     margin-left: 10px;
+    background: url('../img/background.png');
     border: solid 1px #000;
     box-shadow: -1px 1px 10px 1px rgba(0, 0, 0, 0.56);
     overflow: hidden;
