--- a/css/style.css
+++ b/css/style.css
@@ -45,10 +45,10 @@ body {
 
 /* La cocina */
 
-.cocina {
+.barra {
     position: absolute;
     top: 1px;
-    left: 270px;
+    left: 285px;
     width: 100px;
     height: 40px;
     text-align: center;
@@ -133,109 +133,60 @@ body {
 
 #mesa1 {
     position: absolute;
-    top: 160px;
+    top: 130px;
     left: 100px;
-    width: 40px;
-    height: 40px;
-    text-align: center;
-    vertical-align: middle;
-    background-color: rosybrown;
-    border-radius: 17px;
-    border: solid 1px brown;
-    box-shadow: 0px 3px 5px 1px silver;
-    -webkit-transition: background-color 8s ease-out;
-    transition: background-color 8s ease-out;
 }
 
 #mesa2 {
     position: absolute;
-    top: 160px;
+    top: 130px;
     left: 300px;
-    width: 40px;
-    height: 40px;
-    text-align: center;
-    vertical-align: middle;
-    background-color: rosybrown;
-    border-radius: 17px;
-    border: solid 1px brown;
-    box-shadow: 0px 3px 5px 1px silver;
-    -webkit-transition: background-color 8s ease-out;
-    transition: background-color 8s ease-out;
 }
 
 #mesa3 {
     position: absolute;
-    top: 160px;
+    top: 130px;
     left: 500px;
-    width: 40px;
-    height: 40px;
-    text-align: center;
-    vertical-align: middle;
-    background-color: rosybrown;
-    border-radius: 17px;
-    border: solid 1px brown;
-    box-shadow: 0px 3px 5px 1px silver;
-    -webkit-transition: background-color 8s ease-out;
-    transition: background-color 8s ease-out;
 }
 
 #mesa4 {
     position: absolute;
-    top: 360px;
+    top: 330px;
     left: 100px;
-    width: 40px;
-    height: 40px;
-    text-align: center;
-    vertical-align: middle;
-    background-color: rosybrown;
-    border-radius: 17px;
-    border: solid 1px brown;
-    box-shadow: 0px 3px 5px 1px silver;
-    -webkit-transition: background-color 8s ease-out;
-    transition: background-color 8s ease-out;
 }
 
 #mesa5 {
     position: absolute;
-    top: 360px;
+    top: 330px;
     left: 300px;
-    width: 40px;
-    height: 40px;
-    text-align: center;
-    vertical-align: middle;
-    background-color: rosybrown;
-    border-radius: 17px;
-    border: solid 1px brown;
-    box-shadow: 0px 3px 5px 1px silver;
-    -webkit-transition: background-color 8s ease-out;
-    transition: background-color 8s ease-out;
 }
 
 #mesa6 {
     position: absolute;
-    top: 360px;
+    top: 330px;
     left: 500px;
-    width: 40px;
-    height: 40px;
-    text-align: center;
-    vertical-align: middle;
-    background-color: rosybrown;
-    border-radius: 17px;
-    border: solid 1px brown;
-    box-shadow: 0px 3px 5px 1px silver;
-    -webkit-transition: background-color 8s ease-out;
-    transition: background-color 8s ease-out;
 }
 
-#mesa.ready {
-    /* mesa lista */
-    background-color: crimson;
-    border: solid 1px red;
+.vacia {
+    width: 80px;
+    height: 77px;
+    background-image: url(../img/empty.png);
 }
 
-#mesa.waiting {
-    /* mesa esperando */
-    background-color: greenyellow;
-    border: solid 1px green;
-    cursor: pointer;
+.vacia p {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.llena {
+    width: 80px;
+    height: 77px;
+    background-image: url(../img/full.png);
+}
+
+.llena p {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
