--- a/css/style.css
+++ b/css/style.css
@@ -2,14 +2,21 @@ body {
     background-color: #f1f1f1;
 }
 
+@font-face {
+    font-family: 'Cafe Nero M54';
+    font-style: normal;
+    font-weight: normal;
+    src: url('../font/Cafe Nero M54.ttf') format('truetype');
+}
+
 .titulo {
+    font-family: 'Cafe Nero M54';
+    font-weight: normal;
     margin-left: 10px;
     margin-right: 10px;
-    color: #fff;
+    color: #346e7c;
     font-size: 6em;
-    font-weight: bold;
-    font-family: Helvetica;
-    text-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa, 0 6px 1px rgba(0, 0, 0, .1), 0 0 5px rgba(0, 0, 0, .1), 0 1px 3px rgba(0, 0, 0, .3), 0 3px 5px rgba(0, 0, 0, .2), 0 5px 10px rgba(0, 0, 0, .25), 0 10px 10px rgba(0, 0, 0, .2), 0 20px 20px rgba(0, 0, 0, .15);
+    text-shadow: 2px 0 0 #fff, -2px 0 0 #fff, 0 2px 0 #fff, 0 -2px 0 #fff, 1px 1px #fff, -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff;
 }
 
 .titulo {
@@ -42,20 +49,58 @@ body {
     overflow: hidden;
 }
 
+#planta1 {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 36px;
+    height: 40px;
+    background: url('../img/planta1.png');
+}
+
+#planta2 {
+    position: absolute;
+    top: 0px;
+    left: 600px;
+    width: 36px;
+    height: 40px;
+    background: url('../img/planta1.png');
+}
+
+#planta3 {
+    position: absolute;
+    top: 455px;
+    left: 0px;
+    width: 36px;
+    height: 40px;
+    background: url('../img/planta1.png');
+}
+
+#planta4 {
+    position: absolute;
+    top: 455px;
+    left: 600px;
+    width: 36px;
+    height: 40px;
+    background: url('../img/planta1.png');
+}
+
 
 /* La cocina */
 
 .barra {
     position: absolute;
-    top: 1px;
-    left: 285px;
-    width: 100px;
-    height: 40px;
+    top: 0px;
+    left: 262px;
+    width: 123px;
+    height: 37px;
     text-align: center;
     vertical-align: middle;
     line-height: 40px;
-    background-color: lavender;
+    background: url('../img/barra.png');
     border: solid 1px silver;
+    border-bottom-left-radius: 12px;
+    border-bottom-right-radius: 12px;
     box-shadow: 0px 3px 5px 1px silver;
 }
 
@@ -140,13 +185,13 @@ body {
 #mesa2 {
     position: absolute;
     top: 130px;
-    left: 300px;
+    left: 285px;
 }
 
 #mesa3 {
     position: absolute;
     top: 130px;
-    left: 500px;
+    left: 470px;
 }
 
 #mesa4 {
@@ -158,35 +203,140 @@ body {
 #mesa5 {
     position: absolute;
     top: 330px;
-    left: 300px;
+    left: 285px;
 }
 
 #mesa6 {
     position: absolute;
     top: 330px;
-    left: 500px;
+    left: 470px;
 }
 
-.vacia {
+.empty {
     width: 80px;
     height: 77px;
     background-image: url(../img/empty.png);
 }
 
-.vacia p {
+.empty p {
+    font-size: 1.4em;
+    font-weight: bold;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.llena {
+.new {
     width: 80px;
     height: 77px;
     background-image: url(../img/full.png);
 }
 
-.llena p {
+.new p {
+    font-size: 1.4em;
+    font-weight: bold;
     display: flex;
     justify-content: center;
     align-items: center;
+    animation-duration: 1500ms;
+    animation-name: blink-red;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    -webkit-animation: blink-red 500ms infinite;
+    /* Safari and Chrome */
+}
+
+.pending {
+    width: 80px;
+    height: 77px;
+    background-image: url(../img/full.png);
+}
+
+.pending p {
+    font-size: 1.4em;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    animation-duration: 1500ms;
+    animation-name: blink-yellow;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    -webkit-animation: blink-yellow 500ms infinite;
+    /* Safari and Chrome */
+}
+
+.served {
+    width: 80px;
+    height: 77px;
+    background-image: url(../img/served.png);
+}
+
+.served p {
+    font-size: 1.4em;
+    font-weight: bold;
+    color: #67ff42;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    animation-duration: 1500ms;
+    animation-name: blink-green;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    -webkit-animation: blink-green 2000ms infinite;
+    /* Safari and Chrome */
+}
+
+@keyframes blink-green {
+    from {
+        color: white;
+    }
+    to {
+        color: limegreen;
+    }
+}
+
+@-webkit-keyframes blink-green {
+    from {
+        color: white;
+    }
+    to {
+        color: limegreen;
+    }
+}
+
+@keyframes blink-yellow {
+    from {
+        color: darkorange;
+    }
+    to {
+        color: yellow;
+    }
+}
+
+@-webkit-keyframes blink-yellow {
+    from {
+        color: darkorange;
+    }
+    to {
+        color: yellow;
+    }
+}
+
+@keyframes blink-red {
+    from {
+        color: white;
+    }
+    to {
+        color: red;
+    }
+}
+
+@-webkit-keyframes blink-red {
+    from {
+        color: white;
+    }
+    to {
+        color: red;
+    }
 }
