--- a/css/style.css
+++ b/css/style.css
@@ -40,13 +40,18 @@ body {
     float: left;
     position: relative;
     width: 300px;
-    height: 500px;
+    height: 495px;
+    padding: 5px 5px 0px 5px;
     margin-top: 15px;
     margin-left: 10px;
     border: solid 1px #000;
     box-shadow: -1px 1px 10px 1px rgba(0, 0, 0, 0.56);
     border-radius: 5px;
     overflow: hidden;
+}
+
+#tiempo {
+    text-align: center;
 }
 
 #planta1 {
@@ -339,6 +344,9 @@ body {
     animation-direction: alternate;
     -webkit-animation: blink-green 2000ms infinite;
 }
+
+
+/* -------- */
 
 @keyframes blink-green {
     from {
