--- a/css/style.css
+++ b/css/style.css
@@ -129,7 +129,7 @@ div#numeroBarra div.listo {
     box-shadow: 0 0 1px #333;
 }
 
-#barra div.esconde {
+div#numeroBarra div.esconde {
     display: none;
 }
 
@@ -197,23 +197,6 @@ div#numeroBarra div.listo {
     text-align: center;
     line-height: 18px;
     box-shadow: 0 0 1px #333;
-    animation: push ease 15s alternate infinite;
-    animation-delay: 1.5s;
-}
-
-@keyframes push {
-    0% {
-        left: -12;
-        top: -12;
-    }
-    50% {
-        left: -10px;
-        top: -10px;
-    }
-    100% {
-        top: -12px;
-        left: -12px;
-    }
 }
 
 
